- Fixed checkbox alignment inside of data view filters

--- a/RockWeb/Styles/_blocks-reporting.less
+++ b/RockWeb/Styles/_blocks-reporting.less
@@ -78,9 +78,10 @@
 .filterfield {
   margin-bottom: 12px;
 
-  // Override table-cell alignment for dynamic reports
+  // Override table-cell alignment for dynamic reports and data views
   .field-criteria > div {
     display: block;
+    float: left;
   }
 }
 
