--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -1478,6 +1478,13 @@ body.navbar-side-open {
   }
 }
 
+.in-columns {
+  .checkbox-inline:first-child,
+  .radio-inline:first-child {
+    padding-left: 30px;
+  }
+}
+
 .note-editor.note-frame {
   margin: 0;
   border: 0;
